--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: targeted
 Type: Package
 Title: Targeted Inference
-Version: 0.1.1
+Version: 0.1.2
 Date: 2020-05-10
 Authors@R: c(person("Klaus K.", "Holst", email="klaus@holst.it", role=c("aut", "cre")))
 Author: Klaus K. Holst [aut, cre]
@@ -18,7 +18,7 @@ Suggests:
     testthat (>= 0.11),
     knitr,
     rmarkdown
-URL: https://kkholst.github.io/targeted/
+URL: https://targetlib.org/r/
 BugReports: https://github.com/kkholst/targeted/issues
 License: Apache License (== 2.0)
 Imports: methods, Rcpp (>= 1.0.0), optimx, futile.logger
