--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ notes.org
 misc/*.csv
 misc/sgd/*.csv
 misc/functional
+misc/sgd/.ipynb_checkpoints/sgd_test-checkpoint.ipynb
+misc/sgd/sgd_test.ipynb
 
 *.Rcheck
 symbols.rds
