--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ misc/sgd/*.csv
 misc/functional
 misc/sgd/.ipynb_checkpoints/sgd_test-checkpoint.ipynb
 misc/sgd/sgd_test.ipynb
+misc/sgd/sgd/.ropeproject/
 
 *.Rcheck
 symbols.rds
