Naive bayes c++ source code and data.table imported

--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -3,6 +3,13 @@
 S3method(coef,targeted)
 S3method(iid,targeted)
 S3method(logLik,targeted)
+S3method(plot,calibration)
+S3method(predict,NB)
+S3method(predict,NB2)
+S3method(predict,calibration)
+S3method(predict,density)
+S3method(print,NB)
+S3method(print,calibration)
 S3method(print,summary.ace.targeted)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
@@ -11,13 +18,24 @@ S3method(summary,ace.targeted)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(vcov,targeted)
+export(NB)
+export(NB2)
+export(Scoring)
+export(ScoringMany)
 export(ace)
 export(aipw)
+export(calibrate)
+export(calibration)
+export(isoreg)
+export(pava)
 export(riskreg)
 export(riskreg_fit)
 export(riskreg_mle)
+export(softmax)
 import(Rcpp)
 import(methods)
+importFrom(data.table,data.table)
+importFrom(data.table,is.data.table)
 importFrom(futile.logger,flog.debug)
 importFrom(futile.logger,flog.info)
 importFrom(futile.logger,flog.warn)
@@ -29,9 +47,11 @@ importFrom(lava,getoutcome)
 importFrom(lava,iid)
 importFrom(lava,na.pass0)
 importFrom(optimx,optimx)
+importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,density)
 importFrom(stats,deriv)
 importFrom(stats,glm)
 importFrom(stats,glm.fit)
