--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -14,6 +14,12 @@ Description: Various methods for targeted and semiparametric inference including
 Depends:
     R (>= 3.3),
     lava (>= 1.6.6)
+Imports:
+    data.table,
+    futile.logger,
+    methods,
+    Rcpp (>= 1.0.0),
+    optimx
 Suggests:
     testthat (>= 0.11),
     knitr,
@@ -21,7 +27,6 @@ Suggests:
 URL: https://targetlib.org/r/
 BugReports: https://github.com/kkholst/targeted/issues
 License: Apache License (== 2.0)
-Imports: methods, Rcpp (>= 1.0.0), optimx, futile.logger
 LinkingTo: Rcpp, RcppArmadillo
 LazyLoad: yes
 NeedsCompilation: yes
@@ -29,5 +34,5 @@ SystemRequirements: C++11
 ByteCompile: yes
 RcppModules: riskregmodel, dcmodel
 Encoding: UTF-8
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 VignetteBuilder: knitr
