--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -13,7 +13,7 @@ Description: Various methods for targeted and semiparametric inference including
 	     <doi:10.1080/01621459.2016.1192546>).
 Depends:
     R (>= 3.3),
-    lava (>= 1.6.6)
+    lava (>= 1.6.8)
 Imports:
     data.table,
     futile.logger,
@@ -21,6 +21,7 @@ Imports:
     Rcpp (>= 1.0.0),
     optimx
 Suggests:
+    mgcv,
     testthat (>= 0.11),
     knitr
 URL: https://targetlib.org/r/
