--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
       install:
         - python3 -m pip install cibuildwheel==1.6.2
       env:
-        - CIBW_SKIP="cp27-* cp35-*"
+        - CIBW_SKIP="cp27-* cp35-* pp27-*"
         - CIBW_BEFORE_BUILD="yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; cmake -B build && cd build; make install; cd ../../.."
       script:
         - make exportpy
@@ -62,7 +62,7 @@ jobs:
       install:
         - python3 -m pip install cibuildwheel==1.6.2
       env:
-        - CIBW_SKIP="cp27-* cp35-*"
+        - CIBW_SKIP="cp27-* cp35-* pp27-*"
         - CIBW_BEFORE_BUILD="pip install cmake"
       script:
         - make exportpy
