--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
       install:
         - pip3 install pytest pytest-runner pytest-cov scipy patsy numpy pandas statsmodels
       script:
-        - cd python-package
+        - cd python-package/targeted
         - python3 setup.py install
         - python3 setup.py test
         - bin/test_targeted
@@ -73,24 +73,6 @@ jobs:
           python3 -m pip install twine
           python3 -m twine upload wheelhouse/*.whl
           fi
-
-    # --------------------------------------------------------------------------------
-
-    # - name: "Python: windows wheels"
-    #   os: windows
-    #   language: shell
-    #   before_install:
-    #     - choco install python --version 3.8.0
-    #     - choco install make
-    #     - choco install cmake
-    #     - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
-    #   install:
-    #     - python -m pip install cibuildwheel==1.3.0
-    #   script:
-    #     - make exportpy
-    #     - cp lib/armadillo/examples/lib_win64/* lib/armadillo/
-    #     - cd build/python; CIBW_SKIP="cp27-* cp35-* cp36-* cp37-*"
-    #   python -m cibuildwheel --output-dir wheelhouse
 
     # --------------------------------------------------------------------------------
 
@@ -190,7 +172,7 @@ jobs:
       install:
         - pip3 install pytest pytest-runner pytest-cov scipy patsy numpy pandas statsmodels codecov
       script:
-        - cd python-package
+        - cd python-package/targeted
         - python3 setup.py install
         - python3 -m targeted
         - pytest --cov=targeted tests/
