--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,10 @@ jobs:
       install:
         - python3 -m pip install cibuildwheel==1.7.0
       env:
+        - CIBW_MANYLINUX_X86_64_IMAGE="manylinux2014"
+        - CIBW_MANYLINUX_I686_IMAGE="manylinux2014"
         - CIBW_SKIP="cp27-* cp35-* pp27-*"
-        - CIBW_BEFORE_BUILD="yum clean all && yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; cmake -B build && cd build; make install; cd ../../.."
+        - CIBW_BEFORE_BUILD="yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; cmake -B build && cd build; make install; cd ../../.."
       script:
         - make exportpy
         - cd build/python; python3 -m cibuildwheel --output-dir wheelhouse
