--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,4 @@
    base = "/doc"
    command = "make html"
    publish = "build/html"
-   ignore =  "git log -1 --pretty=%B | grep -ic "doc" | xargs -I % test % -eq 0"
+   ignore =  "git log -1 --pretty=%B | grep -ic doc | xargs -I % test % -eq 0"
