--- a/python-package/ssm/pytest.ini
+++ b/python-package/ssm/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-norecursedirs = lib/pybind11 lib/catch2 lib/armadillo .eggs
+norecursedirs = lib/pybind11 lib/doctest lib/armadillo .eggs
 log_file = tests/pytest.log
 log_file_level = DEBUG
 log_file_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
