--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -3,6 +3,8 @@ filter=-runtime/indentation_namespace
 filter=-whitespace/indent
 filter=-build/include_subdir
 filter=-runtime/references
+filter=-runtime/references
+filter=-readability/casting
 
 # Limit line length.
 linelength=80
