--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,12 @@
 root = true
 
-[*.{h,.hpp,cpp,c}]
-insert_final_newline = true
+[*]
 charset = utf-8
-indent_style = space
-indent_size = 2
+end_of_line = lf
 trim_trailing_whitespace = true
 
-[*.md]
-trim_trailing_whitespace = true
+[*.{h,.hpp,cpp,c}]
+insert_final_newline = true
+indent_style = space
+indent_size = 2
+tab_width = 2
