new ODE methods

--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -33,12 +33,14 @@ export(aipw)
 export(calibrate)
 export(calibration)
 export(condlogit)
-export(isoreg)
+export(isoregw)
 export(pava)
 export(riskreg)
 export(riskreg_fit)
 export(riskreg_mle)
 export(softmax)
+export(solve_ode)
+export(specify_ode)
 import(Rcpp)
 import(methods)
 importFrom(data.table,data.table)
