--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ jobs:
       env:
         - CIBW_SKIP="cp27-* cp35-* pp*"
         - CIBW_BEFORE_BUILD="pip install cmake"
-        - CIBW_ARCHS_LINUX="x86_64 arm64"
+        - CIBW_ARCHS="x86_64 arm64"
       script:
         - make py_export pkg=targeted
         - cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
