--- a/.gitmodules
+++ b/.gitmodules
@@ -6,6 +6,7 @@
 	path = lib/armadillo
 	shallow = true
 	url = https://gitlab.com/conradsnicta/armadillo-code.git
+	branch = 10.4.x
 [submodule "lib/spdlog"]
 	path = lib/spdlog
 	shallow = true
