--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -27,6 +27,6 @@ jobs:
           CIBW_MANYLINUX_I686_IMAGE: manylinux2014"
           CIBW_SKIP: cp27-* cp35-* pp*
           CIBW_BEFORE_BUILD: yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; cmake -B build && cd build; make install; cd ../../.."
-        run:
+        run: |
           make py_export pkg=targeted
           cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
