--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Build wheels
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-          CIBW_MANYLINUX_I686_IMAGE: manylinux2014"
+          CIBW_MANYLINUX_I686_IMAGE: manylinux2014
           CIBW_SKIP: cp27-* cp35-* pp*
           CIBW_BEFORE_BUILD: yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; cmake -B build && cd build; make install; cd ../../..
         run: |
