--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -3,7 +3,7 @@ name: targeted python wheels
 on: [push]
 
 jobs:
-  job1:
+  linux_build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -34,8 +34,19 @@ jobs:
         run: |
           make py_export pkg=targeted
           cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
+      - name: Build source package
+        run: |
+          python3 setup.py sdist
+          python3 -m pip install -U pip
+          python3 -m pip install --use-feature=2020-resolver -U setuptools twine
+      - name: Upload to PyPi
+        # https://packaging.python.org/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        run: |
+          python3 -m twine upload dist/*.tar.gz
+          python3 -m twine upload wheelhouse/*.whl
 
-  job2:
+  macosx_build:
     runs-on: macos-latest
     strategy:
       matrix:
@@ -50,4 +61,18 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          echo "hello, world!"
+          python -m pip install --upgrade pip
+          pip install cibuildwheel==1.10.0
+      - name: Build wheels
+        env:
+          CIBW_BEFORE_BUILD: pip install cmake
+          CIBW_SKIP: cp27-* cp35-* pp*
+          CIBW_ARCHS: x86_64 arm64
+        run: |
+          make py_export pkg=targeted
+          cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
+      - name: Upload to PyPi
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        run: |
+          python3 -m pip install --use-feature=2020-resolver -U setuptools twine
+          python3 -m twine upload wheelhouse/*.whl
