--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -36,13 +36,14 @@ jobs:
           cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
       - name: Build source package
         run: |
+          cd build/python/targeted
           python3 setup.py sdist
-          python3 -m pip install -U pip
-          python3 -m pip install --use-feature=2020-resolver -U setuptools twine
       - name: Upload to PyPi
         # https://packaging.python.org/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: |
+          python3 -m pip install --use-feature=2020-resolver -U setuptools twine
+          cd build/python/targeted
           python3 -m twine upload dist/*.tar.gz
           python3 -m twine upload wheelhouse/*.whl
 
@@ -75,4 +76,5 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: |
           python3 -m pip install --use-feature=2020-resolver -U setuptools twine
+          cd build/python/targeted
           python3 -m twine upload wheelhouse/*.whl
