--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -41,6 +41,9 @@ jobs:
       - name: Upload to PyPi
         # https://packaging.python.org/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
           python3 -m pip install --use-feature=2020-resolver -U setuptools twine
           cd build/python/targeted
@@ -74,6 +77,9 @@ jobs:
           cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
       - name: Upload to PyPi
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
           python3 -m pip install --use-feature=2020-resolver -U setuptools twine
           cd build/python/targeted
