--- a/.github/workflows/target_check.yaml
+++ b/.github/workflows/target_check.yaml
@@ -32,6 +32,14 @@ jobs:
 
   cpp_library:
     runs-on: ubuntu-latest
+    matrix:
+        config:
+        - {
+            cxx="g++"
+          }
+        - {
+            cxx="clang++"
+          }
     steps:
       - name: Checkout repository incl. submodules
         uses: actions/checkout@v2
@@ -40,3 +48,9 @@ jobs:
       - name: Check
         run: |
           make test
+      - name: Coverage
+        run: |
+          make coverage
+          cd build/coverage; make coverage
+          ./target_test -s
+          bash <(curl -s https://codecov.io/bash)
