--- a/.github/workflows/target_check.yaml
+++ b/.github/workflows/target_check.yaml
@@ -37,6 +37,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y lcov
       - name: Unit tests
         run: |
           make test
