--- a/.github/workflows/target_check.yaml
+++ b/.github/workflows/target_check.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.9]
 
     steps:
       - name: Checkout repository incl. submodules
@@ -21,14 +21,18 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest-runner pytest-cov scipy patsy numpy pandas statsmodels
+          pip install pytest-runner pytest-cov scipy patsy numpy pandas statsmodels codecov
       - name: Check
         run: |
           cd python-package/targeted
           python setup.py install
           python setup.py test
-          bin/test_targeted
           python3 -m targeted
+          pytest --cov=targeted tests/
+          bin/test_targeted
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
 
   cpp_library:
     runs-on: ubuntu-latest
