Clean-up targeted package. condlogit temporarily removed

--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: targeted
 Type: Package
 Title: Targeted Inference
-Version: 0.1.2
-Date: 2020-05-10
+Version: 0.2.0
+Date: 2021-10-19
 Authors@R: c(person("Klaus K.", "Holst", email="klaus@holst.it", role=c("aut", "cre")))
 Author: Klaus K. Holst [aut, cre]
 Maintainer: Klaus K. Holst <klaus@holst.it>
@@ -16,6 +16,7 @@ Depends:
     lava (>= 1.6.8)
 Imports:
     data.table,
+    digest,
     futile.logger,
     methods,
     Rcpp (>= 1.0.0),
@@ -23,6 +24,7 @@ Imports:
 Suggests:
     mgcv,
     testthat (>= 0.11),
+    rmarkdown,
     knitr
 URL: https://targetlib.org/r/
 BugReports: https://github.com/kkholst/targeted/issues
@@ -32,7 +34,7 @@ LazyLoad: yes
 NeedsCompilation: yes
 SystemRequirements: C++11
 ByteCompile: yes
-RcppModules: riskregmodel, dcmodel
+RcppModules: riskregmodel
 Encoding: UTF-8
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
