--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,24 +3,48 @@
 S3method(coef,targeted)
 S3method(iid,targeted)
 S3method(logLik,targeted)
-S3method(print,summary.ace.targeted)
+S3method(plot,calibration)
+S3method(predict,NB)
+S3method(predict,NB2)
+S3method(predict,calibration)
+S3method(predict,density)
+S3method(print,NB)
+S3method(print,calibration)
+S3method(print,summary.ate.targeted)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
 S3method(print,targeted)
-S3method(summary,ace.targeted)
+S3method(summary,ate.targeted)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(vcov,targeted)
-export(ace)
+export(NB)
+export(NB2)
+export(Scoring)
+export(ScoringMany)
 export(aipw)
+export(ate)
+export(calibrate)
+export(calibration)
+export(isoregw)
+export(pava)
 export(riskreg)
 export(riskreg_fit)
 export(riskreg_mle)
+export(softmax)
+export(solve_ode)
+export(specify_ode)
 import(Rcpp)
 import(methods)
+importFrom(data.table,data.table)
+importFrom(data.table,is.data.table)
+importFrom(digest,sha1)
 importFrom(futile.logger,flog.debug)
 importFrom(futile.logger,flog.info)
 importFrom(futile.logger,flog.warn)
+importFrom(grDevices,nclass.Sturges)
+importFrom(graphics,abline)
+importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(lava,Inverse)
@@ -29,10 +53,13 @@ importFrom(lava,getoutcome)
 importFrom(lava,iid)
 importFrom(lava,na.pass0)
 importFrom(optimx,optimx)
+importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,density)
 importFrom(stats,deriv)
+importFrom(stats,dnorm)
 importFrom(stats,glm)
 importFrom(stats,glm.fit)
 importFrom(stats,lm)
@@ -43,8 +70,11 @@ importFrom(stats,model.matrix)
 importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,predict)
+importFrom(stats,quantile)
+importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,vcov)
+importFrom(stats,weighted.mean)
 importFrom(utils,head)
 importFrom(utils,tail)
 useDynLib(targeted, .registration=TRUE)
