cv, vignette init

--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -18,6 +18,8 @@ Imports:
     data.table,
     digest,
     futile.logger,
+    future.apply,
+	progressr,
     methods,
     Rcpp (>= 1.0.0),
     optimx
