--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -9,27 +9,30 @@ S3method(predict,calibration)
 S3method(predict,density)
 S3method(print,NB)
 S3method(print,calibration)
+S3method(print,cross_validated)
 S3method(print,summary.ate.targeted)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
 S3method(print,targeted)
 S3method(summary,ate.targeted)
+S3method(summary,cross_validated)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(vcov,targeted)
 export(NB)
 export(NB2)
-export(Scoring)
-export(ScoringMany)
 export(aipw)
 export(ate)
 export(calibrate)
 export(calibration)
+export(cv)
+export(expand.list)
 export(isoregw)
 export(pava)
 export(riskreg)
 export(riskreg_fit)
 export(riskreg_mle)
+export(scoring)
 export(softmax)
 export(solve_ode)
 export(specify_ode)
@@ -70,6 +73,7 @@ importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,runif)
 importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,vcov)
