--- a/python-package/targeted/CMakeLists.txt
+++ b/python-package/targeted/CMakeLists.txt
@@ -35,14 +35,14 @@ endif()
 FIND_PACKAGE(PythonInterp REQUIRED 3)
 FIND_PACKAGE(PythonLibs REQUIRED 3)
 
-find_package(Armadillo 9.500 QUIET)
-if (ARMADILLO_FOUND)
-  message ([Main]  " Armadillo FOUND")
-else()
+# find_package(Armadillo 9.500 QUIET)
+# if (ARMADILLO_FOUND)
+#   message ([Main]  " Armadillo FOUND")
+# else()
   message ([Main]  " Using Armadillo included in this package")
   set(DETECT_HDF5 OFF CACHE BOOL "Disable Armadillo HDF5 support")
   add_subdirectory(lib/armadillo)
-endif ()
+# endif ()
 
 message([Main] " ARMADILLO_LIBRARIES = ${ARMADILLO_LIBRARIES}")
 message([Main] " ARMADILLO_INCLUDE_DIRS = ${ARMADILLO_INCLUDE_DIRS}")
