--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -28,7 +28,7 @@ Suggests:
     testthat (>= 0.11),
     rmarkdown,
     knitr
-URL: https://targetlib.org/r/
+URL: https://www.targetlib.org/r/
 BugReports: https://github.com/kkholst/targeted/issues
 License: Apache License (== 2.0)
 LinkingTo: Rcpp, RcppArmadillo
