--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -2,12 +2,15 @@
 
 S3method(coef,cross_validated)
 S3method(coef,targeted)
+S3method(estimate,ml_model)
 S3method(iid,targeted)
 S3method(logLik,targeted)
+S3method(model.matrix,design)
 S3method(plot,calibration)
 S3method(predict,NB)
 S3method(predict,calibration)
 S3method(predict,density)
+S3method(predict,ml_model)
 S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
@@ -17,8 +20,10 @@ S3method(print,summary.targeted)
 S3method(print,targeted)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
+S3method(summary,design)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
+S3method(update,design)
 S3method(vcov,targeted)
 export(NB)
 export(NB2)
@@ -27,8 +32,10 @@ export(ate)
 export(calibrate)
 export(calibration)
 export(cv)
+export(design)
 export(expand.list)
 export(isoregw)
+export(ml_model)
 export(pava)
 export(riskreg)
 export(riskreg_fit)
