--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -63,10 +63,12 @@ importFrom(lava,getoutcome)
 importFrom(lava,iid)
 importFrom(lava,na.pass0)
 importFrom(optimx,optimx)
+importFrom(stats,.getXlevels)
 importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,delete.response)
 importFrom(stats,density)
 importFrom(stats,deriv)
 importFrom(stats,dnorm)
@@ -77,6 +79,7 @@ importFrom(stats,lm.fit)
 importFrom(stats,lm.wfit)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,model.response)
 importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,predict)
