--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -46,6 +46,7 @@ export(solve_ode)
 export(specify_ode)
 import(Rcpp)
 import(methods)
+importFrom(R6,R6Class)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
 importFrom(digest,sha1)
