cv and ml_model works better in cases where models are not fitted with formula arguments. See vignette example.

--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -8,6 +8,7 @@ S3method(logLik,targeted)
 S3method(model.matrix,design)
 S3method(plot,calibration)
 S3method(predict,NB)
+S3method(predict,NB2)
 S3method(predict,calibration)
 S3method(predict,density)
 S3method(predict,ml_model)
