--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,16 @@
 
 S3method(coef,cross_validated)
 S3method(coef,targeted)
+S3method(estimate,ml_model)
 S3method(iid,targeted)
 S3method(logLik,targeted)
+S3method(model.matrix,design)
 S3method(plot,calibration)
 S3method(predict,NB)
+S3method(predict,NB2)
 S3method(predict,calibration)
 S3method(predict,density)
+S3method(predict,ml_model)
 S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
@@ -17,8 +21,10 @@ S3method(print,summary.targeted)
 S3method(print,targeted)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
+S3method(summary,design)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
+S3method(update,design)
 S3method(vcov,targeted)
 export(NB)
 export(NB2)
@@ -27,8 +33,10 @@ export(ate)
 export(calibrate)
 export(calibration)
 export(cv)
+export(design)
 export(expand.list)
 export(isoregw)
+export(ml_model)
 export(pava)
 export(riskreg)
 export(riskreg_fit)
@@ -39,6 +47,7 @@ export(solve_ode)
 export(specify_ode)
 import(Rcpp)
 import(methods)
+importFrom(R6,R6Class)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
 importFrom(digest,sha1)
@@ -56,10 +65,12 @@ importFrom(lava,getoutcome)
 importFrom(lava,iid)
 importFrom(lava,na.pass0)
 importFrom(optimx,optimx)
+importFrom(stats,.getXlevels)
 importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,delete.response)
 importFrom(stats,density)
 importFrom(stats,deriv)
 importFrom(stats,dnorm)
@@ -70,6 +81,7 @@ importFrom(stats,lm.fit)
 importFrom(stats,lm.wfit)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,model.response)
 importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,predict)
