--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -3,8 +3,17 @@ Type: Package
 Title: Targeted Inference
 Version: 0.2.1
 Date: 2022-08-03
-Authors@R: c(person("Klaus K.", "Holst", email="klaus@holst.it", role=c("aut", "cre")))
-Author: Klaus K. Holst [aut, cre]
+Authors@R: c(person(given = "Klaus",
+                    family = "Holst",
+                    role = c("aut", "cre"),
+                    email = "klaus@holst.it",
+                    comment = c(ORCID="0000-0002-1364-6789")),
+             person(given = "Andreas",
+                    family = "Nordland",
+                    role = c("aut"),
+                    email = "andreasnordland@gmail.com")
+             )
+Author: Klaus K. Holst [aut, cre], Andreas Nordland [aut]
 Maintainer: Klaus K. Holst <klaus@holst.it>
 Description: Various methods for targeted and semiparametric inference including
 	     augmented inverse probability weighted estimators for missing data and
@@ -22,8 +31,10 @@ Imports:
     optimx,
 	progressr,
     methods,
+    mets,
     R6,
-    Rcpp (>= 1.0.0)
+    Rcpp (>= 1.0.0),
+    survival
 Suggests:
     grf,
     mgcv,
@@ -42,5 +53,6 @@ SystemRequirements: C++11
 ByteCompile: yes
 RcppModules: riskregmodel
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 VignetteBuilder: knitr
