--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -28,6 +28,8 @@ S3method(update,design)
 S3method(vcov,targeted)
 export(NB)
 export(NB2)
+export(RATE)
+export(RATE.surv)
 export(SL)
 export(aipw)
 export(ate)
@@ -77,6 +79,7 @@ importFrom(stats,delete.response)
 importFrom(stats,density)
 importFrom(stats,deriv)
 importFrom(stats,dnorm)
+importFrom(stats,gaussian)
 importFrom(stats,glm)
 importFrom(stats,glm.fit)
 importFrom(stats,lm)
@@ -94,6 +97,7 @@ importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(stats,weighted.mean)
+importFrom(survival,survfit)
 importFrom(utils,head)
 importFrom(utils,tail)
 useDynLib(targeted, .registration=TRUE)
